--- a/requirements.txt
+++ b/requirements.txt
@@ -15,25 +15,25 @@ kiwisolver==1.4.7
 llvmlite==0.41.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.4.3
+matplotlib
 mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
 nox==2024.10.9
 numba==0.58.0
 numpy==1.21.5
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.6.77
-nvidia-nvtx-cu12==12.1.105
+# nvidia-cublas-cu12==12.1.3.1
+# nvidia-cuda-cupti-cu12==12.1.105
+# nvidia-cuda-nvrtc-cu12==12.1.105
+# nvidia-cuda-runtime-cu12==12.1.105
+# nvidia-cudnn-cu12==8.9.2.26
+# nvidia-cufft-cu12==11.0.2.54
+# nvidia-curand-cu12==10.3.2.106
+# nvidia-cusolver-cu12==11.4.5.107
+# nvidia-cusparse-cu12==12.1.0.106
+# nvidia-nccl-cu12==2.18.1
+# nvidia-nvjitlink-cu12==12.6.77
+# nvidia-nvtx-cu12==12.1.105
 opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.0.3
@@ -54,7 +54,7 @@ Theano==1.0.5
 tomli==2.0.2
 torch==2.1.1
 tqdm==4.66.6
-triton==2.1.0
+# triton==2.1.0
 typing_extensions==4.12.2
 tzdata==2024.2
 virtualenv==20.27.1
